--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,4 +20,13 @@
         <item name="android:textColor">@color/white</item>
         <item name="backgroundTint">@color/orange</item>
     </style>
+    <style name="Policies.Button" parent="Base.button">
+        <item name="android:textColor">@color/black</item>
+        <item name="backgroundTint">@color/white</item>
+        <item name="android:layout_width">360dp</item>
+        <item name="android:layout_height">60dp</item>
+        <item name="android:textAlignment">viewStart</item>
+        <item name="android:paddingStart">40dp</item>
+        <item name="android:textSize">18sp</item>
+    </style>
 </resources>
