--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -13,6 +13,33 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:background="@color/light_black">
+
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/baseline_menu_24"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="10dp"
+            app:tint="@color/white">
+        </ImageView>
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/baseline_search_24"
+            android:layout_gravity="center_vertical|end"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            app:tint="@color/white">
+        </ImageView>
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/baseline_speed_24"
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            app:tint="@color/red">
+        </ImageView>
     </FrameLayout>
 
     <LinearLayout
